--- a/src/components/facilities-finder.scss
+++ b/src/components/facilities-finder.scss
@@ -4,7 +4,7 @@
   background-color: $background-light;
   padding: 10px;
   margin: 0;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
   position: absolute;
   top: 0;
